# rip

./: .env.example  .gitignore  BUILD.md  CLAUDE.md  CODE-REVIEW.md  LICENSE  README.md  biome.json  package.json  playwright.config.ts  pnpm-lock.yaml  pyproject.toml  tsconfig.base.json  tsconfig.json
.github/workflows/: ci.yml
app/: app.css  root.tsx
app/components/: download-item.tsx  download-queue.tsx  format-selector.test.ts  format-selector.tsx  theme-toggle.tsx  url-input.tsx  video-card.tsx
app/hooks/: use-websocket.ts
app/lib/: api.ts  format-options.ts  network.ts  types.ts  utils.ts
app/routes/: home.tsx
apps/api/: package.json  tsconfig.json
apps/api/src/: app.ts  env.ts  index.ts
apps/api/src/lib/: auth.ts  download-manager.test.ts  download-manager.ts  errors.ts  http.ts  static-assets.test.ts  static-assets.ts  ytdlp.test.ts  ytdlp.ts
apps/web/: .gitignore  components.json  index.html  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
apps/web/src/: main.tsx  routeTree.gen.ts  router.tsx  styles.css
backend/: app.ts  download-manager.test.ts  download-manager.ts  download-stats.ts  env.ts  index.ts  rate-limit.ts  routes.ts  ytdlp.ts
rip/: __init__.py  __main__.py  app.py  config.py  download_manager.py  download_options.py  models.py  rate_limit.py  ytdlp.py
rip/static/: app.css  app.js
rip/templates/: _downloads.html  base.html  index.html
scripts/: cli.ts  smoke.ts  start-web.ts
shared/: types.ts
tests/: support.py  test_app.py  test_download_manager.py  test_ytdlp.py
tests/e2e/: app.spec.ts
(+37 files in other folders)
